fixed nav bar alignment

--- a/assignments/designinmotion/style.css
+++ b/assignments/designinmotion/style.css
@@ -1,11 +1,9 @@
-/* .flexbody {
+.flexbody {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
     
-} */
-
-
+}
 
 
 @font-face {
@@ -13,33 +11,41 @@
     src: url(caviardreamsfont/caviardreams_bold_macroman/Caviar_Dreams_Bold-webfont.woff);
   }
 
+
+  /* Nav Bar */
+
 #topNavLogo{
-    height: 4vh;
+    display: flex;
+    height: 40px;
     order: 0;
-        padding-right: 20px;
+    padding-top: 15px;
+    padding-left: 15px;
+    
     } 
 
-/* 
-    /* Basic menu styling */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
+
 body {
-    font-family: sans-serif;
+    font-family: CaviarDreams;
     font-size: 16px;
 }
+
 nav {
     background: #222;
     padding: 0 15px;
     display: flex;
     height: 10vh;
 }
+
 a {
     color: white;
     text-decoration: none;
 }
+
 .menu {   
     list-style-type: none;
     
@@ -59,13 +65,14 @@ a {
 }
  
 
-  /* Desktop menu */
 @media all and (min-width: 10px) {
     
     #navbar {
         display: flex;
         /* align-items: center;   */
         justify-content: space-between;
+        top: 0px;
+        
     }
     
     .menu {
@@ -90,11 +97,34 @@ a {
         padding-left: 50%;
     } */
 
-    .button {
+    /* Buy Tickets Btn */
+
+    .tixBtn {
         display: flex;
+        flex: 1 1 auto;
         order: 2;
-        justify-content: flex-end;
-    }
+        /* justify-content: flex-end; */
+        /* flex: 1 1 auto; */
+        margin-right: 12px;
+        margin-left: 10px;
+        padding: 10px;
+        transition: 0.5s;
+        background-size: 100% auto;
+        color: white;
+       /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
+        box-shadow: 0 0 10px rgb(237, 181, 225);
+        border-radius: 10px;
+        background-image: linear-gradient(to right, #F4A6D3 0%, #D60091 51%, #7285FF 100%);
+       }
+       .tixBtn a:hover {
+        text-decoration: none;
+       }
+    
+       
+       .tixBtn:hover {
+        background-image: linear-gradient(to left, #F4A6D3 0%, #D60091 51%, #7285FF 100%);
+        
+      }
   
     
     .toggle {
@@ -130,11 +160,20 @@ a {
       height: calc(100% + 8px)
   }
 
+  a:focus {
+    color: white;
+    outline: none;
+    text-decoration: none;
+    }
+
+  /* Hero Banner */
+
  .hero {
      padding-top: 25%;
      padding-bottom: 30%;
      
  }
+
 
 
   #videoSizeControl { 
@@ -146,54 +185,9 @@ a {
     }
 
 
-a:focus {
-    color: white;
-    outline: none;
-    text-decoration: none;
-    }
-
-.twoPosters {
-    display: flex;
-    flex-flow: nowrap;
-    justify-content: space-between;
-    width: 100vw;
-    padding: 3px;
-    margin-left: 20px;
-    margin-top: 20px;
-    padding-bottom: 30px;
-    padding-top: 10px;
-    background-color: rgb(255, 255, 255);  
-    
-}
-
-.tixBtn {
-    flex: 1 1 auto;
-
-    margin-top: 12px;
-    padding: 10px;
-    text-align: center;
-    /* align-items: center; */
-    text-transform: uppercase;
-    transition: 0.5s;
-    background-size: 100% auto;
-    color: white;
-   /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
-    box-shadow: 0 0 10px rgb(237, 181, 225);
-    border-radius: 10px;
-    background-image: linear-gradient(to right, #F4A6D3 0%, #D60091 51%, #7285FF 100%);
-   }
-   .tixBtn a:hover {
-    text-decoration: none;
-   }
-
-   
-   .tixBtn:hover {
-    background-image: linear-gradient(to left, #F4A6D3 0%, #D60091 51%, #7285FF 100%);
-    
-  }
 
  .headergif {
-    width: 100vw;
+    width: 100%;
     position: absolute;
     top: 10vh;
     z-index: -4;
@@ -221,6 +215,24 @@ a:focus {
     font-family: 'CaviarDreams';
     
   }
+
+  /* Two Posters Section */
+
+  .twoPosters {
+    display: flex;
+    flex-flow: nowrap;
+    justify-content: space-between;
+    width: 100vw;
+    padding: 3px;
+    margin-left: 20px;
+    margin-top: 20px;
+    padding-bottom: 30px;
+    padding-top: 10px;
+    background-color: rgb(255, 255, 255);  
+    
+}
+
+  /* Text Break */
 
   .textbreak1 {
     margin: auto;
@@ -256,10 +268,12 @@ a:focus {
 .p {
     font-size: 20px;
     line-height: .75;
-    
-    
-    
 }
+
+/* Carousel */
+
+
+
 
 
 
@@ -364,4 +378,137 @@ input[type="submit"] {
 /* one before the last child */
 .ft-legal-list li:nth-last-child(2) {
     flex: 1;       /* same as flex-grow: 1; */
+}
+
+
+
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
